--- a/store/templates/store/userdashboard/checkout.html
+++ b/store/templates/store/userdashboard/checkout.html
@@ -11,49 +11,49 @@
     <div class="row">
         <div class="col-md-6">
             <div class="card">
-				<div class="card-header flex-c-m p-lr-10 trans-04 signupdesign">
+				<div style="background-color:#717fe0;" class="card-header flex-c-m p-lr-10 trans-04 signupdesign  text-light">
 					<h4>Add Address</h4>
 				</div>
-				<div class="card-body">
+				<div class="card-body ">
 					<form method="POST"> {% csrf_token %}
 						<div class="form-group">
-							<label for="email">Country</label>
-							<input type="text" value="{{country}}" class="form-control" id="email" placeholder="Enter Country" name="country" Required>
+							<label style="color:black;"  class=" " for="email">Country</label>
+							<input type="text" value="{{country}}" class="form-control border-dark" id="email" placeholder="Enter Country" name="country" Required>
 							{% if error and "country" in error %}
 							<span style="color: red">{{error.country}}</span>
 							{% endif %}
 						</div>
 						<div class="form-group">
-							<label for="email">State</label>
-							<input type="text" value="{{state}}" class="form-control" id="email" placeholder="Enter State" name="state" Required>
+							<label style="color:black;" for="email">State</label>
+							<input type="text" value="{{state}}" class="form-control border-dark" id="email" placeholder="Enter State" name="state" Required>
 							{% if error and "state" in error %}
 							<span style="color: red">{{error.state}}</span>
 							{% endif %}
-	
-						<div class="form-group">
-							<label for="email">District</label>
-							<input type="text" value="{{district}}" class="form-control" id="email" placeholder="Enter District" name="district" Required>
+							
+						<div class="form-group mt-3">
+							<label style="color:black;" for="email">District</label>
+							<input type="text" value="{{district}}" class="form-control border-dark" id="email" placeholder="Enter District" name="district" Required>
 							{% if error and "district" in error %}
 							<span style="color: red">{{error.district}}</span>
 							{% endif %}
 						</div>
 						<div class="form-group">
-							<label for="email">Locality</label>
-							<input type="text" value="{{locality}}" class="form-control" id="email" placeholder="Enter Locality" name="locality" Required>
+							<label style="color:black;" for="email">Locality</label>
+							<input type="text" value="{{locality}}" class="form-control border-dark" id="email" placeholder="Enter Locality" name="locality" Required>
 							{% if error and "locality" in error %}
 							<span style="color: red">{{error.locality}}</span>
 							{% endif %}
 						</div>
 						<div class="form-group">
-							<label for="password">House</label>
-							<input type="text" value="{{house}}" class="form-control" id="password" placeholder="Enter House" name="house" Required>
+							<label style="color:black;" for="password">House</label>
+							<input type="text" value="{{house}}" class="form-control border-dark" id="password" placeholder="Enter House" name="house" Required>
 							{% if error and "house" in error %}
 							<span style="color: red">{{error.house}}</span>
 							{% endif %}
 						</div>
 						<div class="form-group">
-							<label for="password">Pincode</label>
-							<input type="number" value="{{pincode}}" class="form-control" id="password" placeholder="Enter Pincode" name="pincode" Required>
+							<label style="color:black;" for="password">Pincode</label>
+							<input type="number" value="{{pincode}}" class="form-control border-dark" id="password" placeholder="Enter Pincode" name="pincode" Required>
 							{% if error and "pincode" in error %}
 							<span style="color: red">{{error.pincode}}</span>
 							{% endif %}
@@ -164,9 +164,12 @@
 	
 				</div>
 				<div class="col-md-8">
-					<span id="totalamount" class="font-weight-bold display-4">{{totalsum}}</span>
+					<span class="font-weight-bold display-4" style="color:#717fe0;" > Rs.</span>
+					<span style="color:#717fe0;" id="totalamount" class="font-weight-bold display-4">{{totalsum}}</span>
+					<span class="font-weight-bold display-4" style="color:#717fe0;" > /-</span>
 	
 				</div>
+				
 
 			</div>
 			<hr>
@@ -194,7 +197,7 @@
 				
 			</div>
 			<div class="row justify-content-end">
-				<button id="applycoupon" name="couponform" class="btn btn-dark" id="apply_coupon">Apply Coupon</button> 
+				<button  id="applycoupon" name="couponform" class=" btn btn-dark" id="apply_coupon">Apply Coupon</button> 
 
 
 			</div>
