User profile some design done

--- a/store/templates/store/userdashboard/userprofile.html
+++ b/store/templates/store/userdashboard/userprofile.html
@@ -146,7 +146,7 @@
                     <span class="ml-5" id="email">{{customerobj.phonenumber}}</span>
                   </div>
                   
-                  <button class="btn btn-warning mt-3"  data-bs-toggle="modal" data-bs-target="#editdata-{{forloop.counter}}" > Edit Details</button>
+                  <button class="flex-c-m stext-101 cl0 btn bg1 bor1 hov-btn1 p-lr-15 trans-04  mt-3"  data-bs-toggle="modal" data-bs-target="#editdata-{{forloop.counter}}" > Edit Details</button>
 
                   
                   
@@ -290,7 +290,7 @@
             
                 </div>
                 <div>
-                  <a href={% url 'deliveredproducts' %}>Delivered Products</a>
+                  <a style="color:#717fe0" href={% url 'deliveredproducts' %}>Delivered Products</a>
                 </div>
                 
             </div>
@@ -343,7 +343,7 @@
                     </li>
                     
 
-                    <button class="btn btn-warning mt-3 ml-5"  data-bs-toggle="modal" data-bs-target="#editaddress-{{forloop.counter}}" > Edit Address</button>
+                    <button class="flex-c-m stext-101 cl0 btn bg1 bor1 hov-btn1 p-lr-15 trans-04  mt-3"  data-bs-toggle="modal" data-bs-target="#editaddress-{{forloop.counter}}" > Edit Address</button>
                     <hr>
                     {% endfor %}
                 </ol>
