--- a/store/templates/store/userdashboard/loggedincart.html
+++ b/store/templates/store/userdashboard/loggedincart.html
@@ -4,17 +4,12 @@
 
 
 {% block content %}
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+{% comment %} <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> {% endcomment %}
 <div class="row mt-5"></div>
 <div class="row mt-5"></div>
 <div class="row mt-5"></div>
 <div class="row mt-5"></div>
-<div id="result">
-	<h5>
-		DEYYYY
-	</h5>
 
-</div>
 <div class="container-fluid">
     <div class="row">
         <!-- Shoping Cart -->
@@ -26,7 +21,7 @@
 						<div class="wrap-table-shopping-cart">
 
 
-							<table class="table table-striped">
+							<table class="table ">
 								<thead>
 								  <tr>
 									<th>Product</th>
@@ -38,18 +33,24 @@
 								</thead>
 								<tbody>
 								  {% for item in cartobjs %}
-								  <tr>
+								  <tr id="cartitem{{item.id}}">
 									<td>
-									  <img class="img-fluid img-responsive" src="{{ item.product.image1.url }}" alt="Product Image">
+									  <img style="  max-width: 150px;
+									  max-height: 150px;" class="img-fluid img-responsive" src="{{ item.product.image1.url }}" alt="Product Image">
 									</td>
-									<td>{{ item.product.name }}</td>
-									<td><div id="productamount">{{ item.product.price }}</div></td>
+									<td class="pt-3">{{ item.product.name }}</td>
+									<td class="pt-3"><div id="productamount">{{ item.product.price }}</div></td>
 
 				
 									<td>
-									  <input class="choosequantity" type="number" min="1" value="{{ item.quantity }}" name="quantity" data-item-id="{{ item.id }}">
+									  <input class="choosequantity form-control" type="number" min="1" value="{{ item.quantity }}" name="quantity" data-item-id="{{ item.id }}">
 									</td>
-									<td><div id="amount{{item.id}}">{{ item.total }}</div></td>
+									<td class="pt-3"><div id="amount{{item.id}}">{{ item.total }}</div></td>
+
+									<td><button class="remove_cart_item  btn btn-danger" data-cart-item={{item.id}}>Remove Item</button> </td>
+
+
+
 								  </tr>
 								  {% endfor %}
 								</tbody>
@@ -59,12 +60,12 @@
 						
 						{% if cartobjs %}
 
-						<div class="mt-5">
+						{% comment %} <div class="mt-5">
 							
 							<button  type="button" class="btn delete-btn btn-danger" >Remove All Items</button>
 						
 						
-						</div>
+						</div> {% endcomment %}
 
 
 
@@ -220,26 +221,27 @@
 
 
  <script>
-  $(document).ready(function() {
-      $(".cartitem-delete-btn").click(function() {
-        var cartid = $(this).data("category-id");
+  
+      $(".remove_cart_item").click(function(event) {
+		event.preventDefault();
+        var cartid = $(this).data("cart-item");
           // Get the selected offer value
         
         // Send an AJAX request to update the offer price
         $.ajax({
-          url: "../deletecartitem/" + cartid, // Replace with the URL of your Django view
+          url: "/deletecartitem/", // Replace with the URL of your Django view
           type: "GET",
-          data: { offer: cartid,
+          data: { cartid: cartid,
                   
                   
               },
           success: function(response) {
             $("#cartitem" + cartid).remove();
             // Update the offer price on the page
-            var newOfferPrice = response.message;  // Assuming the response contains the updated offer price
+        	//var newOfferPrice = response.message;  // Assuming the response contains the updated offer price
             // Update the appropriate HTML element with the new offer price
             //$("#offer_price").text(newOfferPrice);
-            alert(response.message);
+            
           },
           error: function(xhr, errmsg, err) {
             // Handle any errors that occur during the AJAX request
@@ -247,7 +249,7 @@
           }
         });
       });
-    });
+    
   </script>
 
    
