--- a/store/templates/store/userdashboard/userprofile.html
+++ b/store/templates/store/userdashboard/userprofile.html
@@ -115,6 +115,14 @@
 
 
 {% block content %}
+
+{% comment %} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css"> {% endcomment %}
+{% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  {% endcomment %}
+
+
+
+
+
 <br><br><br><br><br><br>
 
 
@@ -146,7 +154,7 @@
                     <span class="ml-5" id="email">{{customerobj.phonenumber}}</span>
                   </div>
                   
-                  <button class="flex-c-m stext-101 cl0 btn bg1 bor1 hov-btn1 p-lr-15 trans-04  mt-3"  data-bs-toggle="modal" data-bs-target="#editdata-{{forloop.counter}}" > Edit Details</button>
+                  <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04 mt-3"  data-bs-toggle="modal" data-bs-target="#editdata-{{forloop.counter}}" > Edit Details</button>
 
                   
                   
@@ -208,8 +216,8 @@
                     <label for="">Phonenumber</label>
                     <input value={{customerobj.phonenumber}} type="number" id="email" name="phonenumber" placeholder="Enter your phonumber" required>
                     <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04">Save Changes</button>
                     </div>
                   </form>
                 </div>
@@ -343,7 +351,7 @@
                     </li>
                     
 
-                    <button class="flex-c-m stext-101 cl0 btn bg1 bor1 hov-btn1 p-lr-15 trans-04  mt-3"  data-bs-toggle="modal" data-bs-target="#editaddress-{{forloop.counter}}" > Edit Address</button>
+                    <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04  mt-3"  data-bs-toggle="modal" data-bs-target="#editaddress-{{forloop.counter}}" > Edit Address</button>
                     <hr>
                     {% endfor %}
                 </ol>
@@ -389,8 +397,8 @@
           <label for="">Pin Code</label>
           <input value={{addressobj.pincode}} type="number" id="email" name="pincode" placeholder="Enter your phonumber" required>
           <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Save Changes</button>
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04">Save Changes</button>
           </div>
         </form>
       </div>
@@ -403,12 +411,40 @@
 
   {% endfor %}
 
+
+
+
+  {% comment %} CANCEL MODAL {% endcomment %}
+ 
+  <div style="margin-top:100px;" class="modal fade" id="cancelModal" tabindex="-1" role="dialog" aria-labelledby="cancelModalLabel" aria-hidden="true">
+ 
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="cancelModalLabel">Confirm Order Cancellation</h5>
+          <button type="button" class="close closeit" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Are you sure you want to cancel this order?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary closeit" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger closeit" data-dismiss="modal" id="confirmcancel">Cancel Order</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <br><br><br><br><br><br>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
+
+
+
 
 
             {% comment %} <script>
@@ -437,35 +473,56 @@
 
 
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      
             <script>
              $(document).ready(function() {
                  $(".delete-btn").click(function() {
                    var orderid = $(this).data("category-id");
                      // Get the selected offer value
                    
+                    $("#cancelModal").modal("show");
+                    
+                    $("#confirmcancel").click(function(){
+                      $.ajax({
+                        url: "../cancelorder/" + orderid, // Replace with the URL of your Django view
+                        type: "GET",
+                        data: { offer: orderid,
+                                
+                                
+                            },
+                        success: function(response) {
+                          //$("#offer" + orderid).remove();
+                          // Update the offer price on the page
+                          var content = response.content;  // Assuming the response contains the updated offer price
+                          // Update the appropriate HTML element with the new offer price
+                          $("#orderitem" + orderid).text("Cancelled").addClass("text-danger");;
+                          
+                        },
+                        error: function(xhr, errmsg, err) {
+                          // Handle any errors that occur during the AJAX request
+                          console.log(xhr.status + ": " + xhr.responseText);
+                        }
+                      });
+
+
+
+
+
+
+
+
+
+                    })
                    // Send an AJAX request to update the offer price
-                   $.ajax({
-                     url: "../cancelorder/" + orderid, // Replace with the URL of your Django view
-                     type: "GET",
-                     data: { offer: orderid,
-                             
-                             
-                         },
-                     success: function(response) {
-                       //$("#offer" + orderid).remove();
-                       // Update the offer price on the page
-                       var content = response.content;  // Assuming the response contains the updated offer price
-                       // Update the appropriate HTML element with the new offer price
-                       $("#orderitem" + orderid).text("Cancelled").addClass("text-danger");;
-                       alert(response.message);
-                     },
-                     error: function(xhr, errmsg, err) {
-                       // Handle any errors that occur during the AJAX request
-                       console.log(xhr.status + ": " + xhr.responseText);
-                     }
-                   });
+               
                  });
+
+                 $(".closeit").click(function(){
+                  $("#cancelModal").modal("hide");
+                 })
+
+
+
                });
              </script>
 
