--- a/storeadmin/templates/storeadmin/orders/editorderstatus.html
+++ b/storeadmin/templates/storeadmin/orders/editorderstatus.html
@@ -14,6 +14,7 @@
         <option value="Cancelled" {% if item.orderstatus == "Cancelled" %}selected{% endif %}>Cancelled</option>
         <option value="Shipped" {% if item.orderstatus == "Shipped" %}selected{% endif %}>Shipped</option>
         <option value="Delivered" {% if item.orderstatus == "Delivered" %}selected{% endif %}>Delivered</option>
+        <option value="Returned" {% if item.orderstatus == "Returned" %}selected{% endif %}>Returned</option>
     </select>
     </div>
     <button type="submit" class="btn btn-primary mt-4">Update</button>
