contact and about page added

--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -121,31 +121,27 @@
 						<ul class="main-menu">
 							<li class="active-menu">
 								<a href={% url 'loggedin' %}>Home</a>
-								<ul class="sub-menu">
+								{% comment %} <ul class="sub-menu">
 									<li><a href="index.html">Homepage 1</a></li>
 									<li><a href="home-02.html">Homepage 2</a></li>
 									<li><a href="home-03.html">Homepage 3</a></li>
-								</ul>
+								</ul> {% endcomment %}
 							</li>
 
 							<li>
 								<a href={% url 'loggedinproduct' %}>Shop</a>
 							</li>
 
-							<li class="label1" data-label1="hot">
-								<a href="shoping-cart.html">Features</a>
-							</li>
-
-							<li>
+							{% comment %} <li>
 								<a href="blog.html">Blog</a>
+							</li> {% endcomment %}
+
+							<li>
+								<a href={% url 'loggedinabout' %}>About</a>
 							</li>
 
 							<li>
-								<a href={% url 'about' %}>About</a>
-							</li>
-
-							<li>
-								<a href="contact.html">Contact</a>
+								<a href={% url 'loggedincontact' %}>Contact</a>
 							</li>
 						
 						</ul>
@@ -157,6 +153,8 @@
 							<i class="zmdi zmdi-search"></i>
 						</div>
 
+						{% block cartquantity %}
+		
 						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="{{no_of_cart_items}}">
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</div>
@@ -164,6 +162,7 @@
 						<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="3">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
+						{% endblock cartquantity %}
         
 	
 
