--- a/store/templates/store/userdashboard/loggedinproduct.html
+++ b/store/templates/store/userdashboard/loggedinproduct.html
@@ -93,39 +93,28 @@
 						<ul class="main-menu">
 							<li class="active-menu">
 								<a href={% url 'loggedin' %}>Home</a>
-								<ul class="sub-menu">
-									<li><a href="index.html">Homepage 1</a></li>
-									<li><a href="home-02.html">Homepage 2</a></li>
-									<li><a href="home-03.html">Homepage 3</a></li>
-								</ul>
+								
 							</li>
 
 							<li>
 								<a href={% url 'loggedinproduct' %}>Shop</a>
 							</li>
 
-							<li class="label1" data-label1="hot">
-								<a href="shoping-cart.html">Features</a>
-							</li>
+							
 
-							<li>
+							{% comment %} <li>
 								<a href={% url 'blog' %}>Blog</a>
+							</li> {% endcomment %}
+
+							<li>
+								<a href={% url 'loggedinabout' %}>About</a>
 							</li>
 
 							<li>
-								<a href={% url 'about' %}>About</a>
-							</li>
-
-							<li>
-								<a href={% url 'contact' %}>Contact</a>
+								<a href={% url 'loggedincontact' %}>Contact</a>
 							</li>
 						
-							{% comment %} <li>
-								<a href={% url 'otplogin' %}>Otplogin</a>
-							</li> {% endcomment %}
-							<li>
-								<a href={% url 'admin_signin' %}>admin signin</a>
-							</li>
+							
 						</ul>
 					</div>	
 
@@ -134,20 +123,42 @@
 						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
 							<i class="zmdi zmdi-search"></i>
 						</div>
-
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="2">
+						{% block cartquantity %}
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="{{no_of_cart_items}}">
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</div>
 
-						<a href="#" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
+						<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="3">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
-                        <a href={% url 'logout' %}>
-                            <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04 bg-danger">
-                                Logout
-                            </button>
+						{% endblock cartquantity %}
+	
 
-                        </a>
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 " >
+							<a style="color: inherit;
+							text-decoration: none;" class="text-decoration-none custom-link-color" href={% url 'userprofile' %}>
+
+								<i class="zmdi zmdi-account-circle"></i>
+
+							</a>
+						</div>
+						<div class="ml-4">
+							<a href={% url 'logout' %}>
+								<button class="btn btn-danger">
+									Logout
+								</button>
+	
+							</a>
+
+						</div>
+						
+
+						
+				
+
+
+						
+                     
 					</div>
 				</nav>
 			</div>	
