--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -35,8 +35,15 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/main.css' %}">
+
+
+	<link rel="stylesheet" href="{% static 'store/magiczoom/magiczoom.css' %}">
+
+
 <!--===============================================================================================-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
+	<script src="{% static 'store/magiczoom/magiczoom.js' %}"></script>
 </head>
 <body class="animsition">
 	
