--- a/store/templates/store/product.html
+++ b/store/templates/store/product.html
@@ -264,7 +264,7 @@
 								{% comment %} <a href={% url 'buynow' item.id %}>
 									Buy it
 								</a> {% endcomment %}
-								<a href={% url 'preview' item.id %}> <button class="btn btn-info">Preview</button> </a>
+								<a href={% url 'guestpreview' item.id %}> <button class="btn btn-info">Preview</button> </a>
 							</div>
 					
 							<div class="block2-txt-child2 flex-r p-t-3">
