--- a/store/templates/store/userdashboard/loggedinproduct.html
+++ b/store/templates/store/userdashboard/loggedinproduct.html
@@ -42,6 +42,22 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/main.css' %}">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+	{% comment %} bootstrap js cdn {% endcomment %}
+	
+	{% comment %} <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> {% endcomment %}
+
+
+	<!-- jQuery -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<!-- Bootstrap JavaScript -->
+	{% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script> {% endcomment %}
+
+
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
 
 	
 
@@ -478,8 +494,11 @@
 								{% comment %} <a href={% url 'buynow' item.id %}>
 									Buy it
 								</a> {% endcomment %}
+								<div style="margin-left:200px;" class="">
+									<a href={% url 'preview' item.id %}> <button class="btn btn-info">Preview</button> </a>
+
+								</div>
 								
-								<a href={% url 'preview' item.id %}> <button class="btn btn-info">Preview</button> </a>
 								
 								{% comment %} <button type="button" class="addit" data-toggle="modal" data-target="#myModal" data-category-id="{{ item.id }}">Add to Cart</button> {% endcomment %}
 
@@ -510,12 +529,38 @@
 									
 								
 							</div>
-					
+
+							{% comment %} <div>
+								<button class="wishlist btn btn-danger" data-product-id="{{item.id}}">Wish List</button>
+
+							</div>  {% endcomment %}
+							<br><br><br>
 							<div class="block2-txt-child2 flex-r p-t-3">
-								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-									<img class="icon-heart1 dis-block trans-04" src="{% static 'store/images/icons/icon-heart-01.png' %}" alt="ICON">
-									<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-								</a>
+								
+								<button class="wishlist btn btn-danger" data-product-id="{{item.id}}">
+									
+									<div class="row">
+										<div class="col-md-4">
+											<img class="icon-heart1 dis-block trans-04" src="{% static 'store/images/icons/icon-heart-01.png' %}" alt="">
+										</div>
+										{% comment %} <div class="col-md-8">
+											WishList
+										</div> {% endcomment %}
+									</div>
+								</button>
+
+
+
+
+
+
+								{% comment %} <a  href="" class="wishlist btn-addwish-b2 dis-block pos-relative "  data-product-id={{item.id}}>
+									<img class=" icon-heart1 dis-block trans-04" src="{% static 'store/images/icons/icon-heart-01.png' %}" alt=""  >
+									<img class=" icon-heart2 dis-block trans-04 ab-t-l" src="{% static 'store/images/icons/icon-heart-02.png' %}" alt=""  >
+								</a> {% endcomment %}
+							</div>
+							<div id="wishlistmsg{{item.id}}" class="row">
+
 							</div>
 						</div>
 					</div>
@@ -1492,6 +1537,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		</div>
 	</div> {% endcomment %}
 
+	<div id="wishlistModal" class="modal">
+		<div class="modal-content">
+		  <span class="close">&times;</span>
+		  <h2>Add to Wishlist</h2>
+		  <p>Item successfully added to your wishlist!</p>
+		</div>
+	</div>
+
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/elevatezoom/2.2.3/jquery.elevatezoom.min.js" integrity="sha512-UH428GPLVbCa8xDVooDWXytY8WASfzVv3kxCvTAFkxD2vPjouf1I3+RJ2QcSckESsb7sI+gv3yhsgw9ZhM7sDw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -1624,6 +1677,107 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 	</script> {% endcomment %}
 
+{% comment %} WISHLIST ADDING {% endcomment %}
+{% comment %} <script>
+$(".wishlist").click(function(){
+	alert("clicked");
+	var productid=$(this).data("product-id");
+
+	$.ajax({
+		url:"../addtowishlist/",
+		type:"GET",
+		data:{
+			productid=productid
+
+		},
+
+		success:function(response){
+			//("#wishlistmodal").modal("show");
+			alert("DEII");
+
+		},
+		error: function(xhr, status, error) {
+			
+		  }
+
+
+
+
+	})
+
+
+
+})
+
+
+
+
+
+</script> {% endcomment %}
+
+
+<script>
+	$(document).ready(function() {
+		$(".wishlist").click(function() {
+			var productid=$(this).data("product-id");
+			
+			// Get the selected offer value
+		  
+		   //$("#wishlistModal").modal("show");
+	
+		   //$("#confirm").click(function(){
+			 $.ajax({
+			   url: "/addtowishlist/", // Replace with the URL of your Django view
+			   type: "GET",
+			   data: { productid: productid,
+					   
+					   
+				   },
+			   success: function(response) {
+				if (response.alreadypresent){
+					$("#wishlistmsg"+productid).html(response.alreadypresent).addClass("text-danger");
+
+				}
+				else if(response.added){
+					$("#wishlistmsg"+productid).html(response.added).addClass("text-success");
+
+				}
+				
+				//$("#wishlistModal").modal("hide");
+				 //$("#offer" + orderid).remove();
+				 // Update the offer price on the page
+				 //var content = response.content;  // Assuming the response contains the updated offer price
+				 // Update the appropriate HTML element with the new offer price
+				 //$("#orderitem" + orderid).text("Cancelled").addClass("text-danger");;
+				 
+			   },
+			   error: function(xhr, errmsg, err) {
+				 // Handle any errors that occur during the AJAX request
+				 console.log(xhr.status + ": " + xhr.responseText);
+			   }
+			 });
+
+
+
+
+
+
+
+
+
+		   //})
+		  // Send an AJAX request to update the offer price
+	  
+		});
+
+		//$(".closeit").click(function(){
+		// $("#cancelModal").modal("hide");
+		//})
+
+
+
+	  });
+	</script>
 
 
 	
