User Home add to wishlist done

--- a/store/templates/store/userdashboard/loggedinproduct.html
+++ b/store/templates/store/userdashboard/loggedinproduct.html
@@ -475,8 +475,8 @@
   								<img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
 							
 
-							<a href="#" id="{{item}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
-								Quick View
+							{% comment %} <a href="#" id="{{item}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+								Quick View {% endcomment %}
 
 							
 						
@@ -1224,11 +1224,11 @@
 		</div>
 	</div>
 	
-	<div class="flex-c-m flex-w w-full p-t-45">
+	{% comment %} <div class="flex-c-m flex-w w-full p-t-45">
 		<a href="#" class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04">
 			Load More
 		</a>
-	</div>
+	</div> {% endcomment %}
 
 	<!-- Footer -->
 	<footer class="bg3 p-t-75 p-b-32">
