wishlist counts updated in guest side

--- a/storeadmin/templates/storeadmin/salesreport.html
+++ b/storeadmin/templates/storeadmin/salesreport.html
@@ -53,10 +53,10 @@
     <div class="row mt-2">
         <form action={% url 'downloadsales' %} method="GET">
             <label for="start_date">Start Date:</label>
-            <input type="date" id="start_date" name="start_date" required>
+            <input class="form-control" type="date" id="start_date" name="start_date" required>
             <br>
             <label for="end_date">End Date:</label>
-            <input type="date" id="end_date" name="end_date" required>
+            <input  class="form-control" type="date" id="end_date" name="end_date" required>
             <br>
            
      
