--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -120,21 +120,12 @@
 							<li>
 								<a href={% url 'shop' %}>Shop</a>
 							</li>
-
-							<li class="label1" data-label1="hot">
-								<a href="shoping-cart.html">Features</a>
-							</li>
-
-							<li>
-								<a href={% url 'blog' %}>Blog</a>
-							</li>
-
 							<li>
 								<a href={% url 'about' %}>About</a>
 							</li>
 
 							<li>
-								<a href={% url 'contact' %}>Contact</a>
+								<a href={% url 'guestcontact' %}>Contact</a>
 							</li>
 							<li>
 								<a href={% url 'login' %}>Login</a>
@@ -148,23 +139,19 @@
 							{% comment %} <li>
 								<a href={% url 'otplogin' %}>Otplogin</a>
 							</li> {% endcomment %}
-							<li>
-								<a href={% url 'admin_signin' %}>admin signin</a>
-							</li>
+						
 						</ul>
 					</div>	
 
 					<!-- Icon header -->
 					<div class="wrap-icon-header flex-w flex-r-m">
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
-							<i class="zmdi zmdi-search"></i>
-						</div>
+						
 
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="2">
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="{{cartcount}}">
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</div>
 
-						<a href={% url 'guestwishlist' %} class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
+						<a href={% url 'guestwishlist' %} class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="{{wishcount}}">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
 					</div>
@@ -292,42 +279,94 @@
 		<div class="header-cart flex-col-l p-l-65 p-r-25">
 			<div class="header-cart-title flex-w flex-sb-m p-b-8">
 				<span class="mtext-103 cl2">
-					Login To see your cart
+					Your Cart
 				</span>
 
 				<div class="fs-35 lh-10 cl2 p-lr-5 pointer hov-cl1 trans-04 js-hide-cart">
 					<i class="zmdi zmdi-close"></i>
 				</div>
 			</div>
-			<div class="row">
-				
-				<div class="col-lg-6">
-					<img class="cartloginicon" src="{% static 'store/images/icons/login-.png' %}" alt="">
-	
-				</div>
-				<div class="col-lg-6 ">
-					<a class="mtext-103 cl2" href={% url 'login' %}> <h5>Login</h5></a>
-				</div>
+			
+			<div class="header-cart-content flex-w js-pscroll">
+				<ul class="header-cart-wrapitem w-full">
+					<li class="header-cart-item flex-w flex-t m-b-12">
+						{% for item,data in cartdict.items %}
 
-			</div>
-			
-			
-			<br><br><br>
-			<div>
-				<span>New here? </span> 
-			</div>
-			<div class="row">
+						<div class="header-cart-item-img">
+							<img src={{data.image}} alt="IMG">
+						</div>
+
+						<div class="header-cart-item-txt p-t-8">
+							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
+								{{data.product}}
+							</a>
+
+							<span class="header-cart-item-info">
+								{{data.quantity}} x Rs. {{data.total}}
+							</span>
+						</div>
+						
+						
+						{% endfor %}
+						
+					</li>
+
+					{% comment %} <li class="header-cart-item flex-w flex-t m-b-12">
+						<div class="header-cart-item-img">
+							<img src="{% static 'store/images/item-cart-02.jpg' %}" alt="IMG">
+						</div>
+
+						<div class="header-cart-item-txt p-t-8">
+							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
+								Converse All Star
+							</a>
+
+							<span class="header-cart-item-info">
+								1 x $39.00
+							</span>
+						</div>
+					</li>
+
+					<li class="header-cart-item flex-w flex-t m-b-12">
+						<div class="header-cart-item-img">
+							<img src="images/item-cart-03.jpg" alt="IMG">
+						</div>
+
+						<div class="header-cart-item-txt p-t-8">
+							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
+								Nixon Porter Leather
+							</a>
+
+							<span class="header-cart-item-info">
+								1 x $17.00
+							</span>
+						</div>
+					</li> {% endcomment %}
+				</ul>
 				
-				<div class="col-lg-6">
-					<span><img class="cartloginicon" src="{% static 'store/images/icons/login-.png' %}" alt=""></span>
+				<div class="w-full">
+					<div class="header-cart-total w-full p-tb-40">
+						Total: {{totalsum}}
+					</div>
+
+					<div class="header-cart-buttons flex-w w-full">
+						<a href={% url 'guestcart' %} class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
+							View Cart
+						</a>
+
+						<a href={% url 'signup' %}  class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
+							Check Out
+						</a>
+					</div>
+					{% comment %} <div>
+						<a href={% url 'previousorders' %} class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
+							Previous Orders
+						</a>
+						
+
+					</div> {% endcomment %}
 				</div>
-				<div class="col-lg-6">
-					<a class="mtext-103 cl2" href={% url 'signup' %}> <h5>Register</h5></a>
-				</div>
-				
 			</div>
-			
-			
 		</div>
 	</div>
 
@@ -765,7 +804,7 @@
 					<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 						<!-- Block2 -->
 						<div class="block2">
-							<div class="block2-pic hov-img0">
+							<div style="width:250px;height:400px;" class="block2-pic hov-img0">
 								
 								
 									  <img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
