--- a/store/templates/store/product.html
+++ b/store/templates/store/product.html
@@ -98,7 +98,7 @@
 				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 					<!-- Block2 -->
 					<div class="block2">
-						<div class="block2-pic hov-img0">
+						<div style="width:250px;height:400px;" class="block2-pic hov-img0">
 							
 							
 								  <img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
