--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -149,9 +149,7 @@
 
 					<!-- Icon header -->
 					<div class="wrap-icon-header flex-w flex-r-m">
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
-							<i class="zmdi zmdi-search"></i>
-						</div>
+						
 
 						{% comment %} {% block cartquantity %} {% endcomment %}
 		
@@ -861,7 +859,7 @@
 					<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 						<!-- Block2 -->
 						<div class="block2">
-							<div class="block2-pic hov-img0">
+							<div style="width:250px;height:400px;" class="block2-pic hov-img0">
 								
 								
 									  <img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
