--- a/store/templates/store/userdashboard/loggedinproduct.html
+++ b/store/templates/store/userdashboard/loggedinproduct.html
@@ -468,11 +468,11 @@
 				
 				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 					<!-- Block2 -->
-					<div class="block2">
-						<div class="block2-pic hov-img0">
+					<div  class="block2">
+						<div style="width:250px;height:400px;" class="block2-pic hov-img0 ">
 							
 							
-  								<img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
+  								<img  src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
 							
 
 							{% comment %} <a href="#" id="{{item}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
