--- a/storeadmin/templates/storeadmin/products/products.html
+++ b/storeadmin/templates/storeadmin/products/products.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-  <div class="col-md-10">
+  <div class="container">
     <form action="" method="POST">{% csrf_token %}
       <div class="input-group">
         <div class="input-group-prepend hover-cursor" id="navbar-search-icon">
@@ -17,6 +17,7 @@
     </form>
   
   </div>
+
   
  
   
@@ -27,7 +28,7 @@
       </a>
     </div>
     <div class="row">
-      <table class="table table-striped">
+      <table class="table table-hover">
         <thead>
           <tr>
             <th>Name</th>
