--- a/storeadmin/templates/storeadmin/users/users.html
+++ b/storeadmin/templates/storeadmin/users/users.html
@@ -9,9 +9,10 @@
             <i class="icon-search"></i>
           </span> {% endcomment %}
         </div>
-        <input type="text" name="searchitem" class="form-control" id="navbar-search-input" placeholder="Search user" aria-label="search" aria-describedby="search">
+        <input style="background-color:#FFFFF0
+        ;" type="text" name="searchitem" class="form-control mt-3" id="navbar-search-input" placeholder="Search user" aria-label="search" aria-describedby="search">
         <div>
-          <button type="submit" class="btn btn-primary btn-block mt-4 ml-3">Search</button>
+          <button  type="submit" class="btn btn-primary btn-block mt-3 ml-3">Search</button>
           
         </div>
       </div>
@@ -21,16 +22,19 @@
   </div>
   
   
-  <div class="container">
+  <div style="background-color:#FFFFF0
+  ;" class="container">
     <div class="col-lg-12 grid-margin stretch-card">
       <div class="card">
-        <div class="card-body">
+        <div style="background-color:#FFFFF0
+        ;" class="card-body">
           {% comment %} <h4 class="card-title">Striped Table</h4> {% endcomment %}
           {% comment %} <p class="card-description">
             Add class <code>.table-striped</code>
           </p> {% endcomment %}
-          <div class="table-responsive">
-            <table class="table table-striped">
+          <div style="background-color:#FFFFF0
+          ;" class="table-responsive">
+            <table class="table table-hover">
               <thead>
                 <tr>
                   <th>Username</th>
