--- a/storeadmin/templates/storeadmin/categories/categories.html
+++ b/storeadmin/templates/storeadmin/categories/categories.html
@@ -10,7 +10,7 @@
     </a>
   </div>
   <div class="row">
-    <table class="table table-striped">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th>Category</th>
@@ -66,11 +66,7 @@
     </table>
   </div>
 </div>
-<div>
-  <button id="but">
-    click
-  </button>
-</div>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
