--- a/storeadmin/templates/storeadmin/coupons/coupons.html
+++ b/storeadmin/templates/storeadmin/coupons/coupons.html
@@ -9,7 +9,7 @@
       </a>
     </div>
     <div class="row">
-      <table class="table table-striped">
+      <table class="table table-hover">
         <thead>
           <tr>
             <th>Code</th>
