--- a/storeadmin/templates/storeadmin/index.html
+++ b/storeadmin/templates/storeadmin/index.html
@@ -26,15 +26,16 @@
   <!-- endinject -->
   <link rel="shortcut icon" href="{% static 'storeadmin/images/favicon.png' %}"   />
 </head>
-<body>
+<body style="background-color:#FFFFF0
+;">
   <div class="container-scroller">
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
-      <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="{% static 'storeadmin/images/images.png' %}" class="mr-2" alt="logo"/></a>
-        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="{% static 'storeadmin/images/images.png' %}"  "" alt="logo"/></a>
+      <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center bg-primary">
+        {% comment %} <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="{% static 'storeadmin/images/images.png' %}" class="mr-2" alt="logo"/></a> {% endcomment %}
+        {% comment %} <a class="navbar-brand brand-logo-mini" href="index.html"><img src="{% static 'storeadmin/images/images.png' %}"  "" alt="logo"/></a> {% endcomment %}
       </div>
-      <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
+      <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end bg-primary">
         <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
           <span class="icon-menu"></span>
         </button>
@@ -305,7 +306,8 @@
       </div>
       <!-- partial -->
       <!-- partial:partials/_sidebar.html -->
-      <nav class="sidebar sidebar-offcanvas" id="sidebar">
+      <nav style="background-color:#FFFFF0
+      ;" class="sidebar sidebar-offcanvas border" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
             <a class="nav-link" href={% url 'admin_index' %}>
@@ -383,25 +385,27 @@
 
       <div class="container-fluid">
 
-        <div class="row mt-5 ml-5">
+        {% comment %} <div class="row mt-5 ml-5">
           Top Product with Most number Of Orders - <span class="text-success font-weight-bold">{{top_product}}</span>
-        </div>
+        </div> {% endcomment %}
         <div class="row  ml-5">
           <div class="col-md-12">
             <div class="row mt-5">
-              <div>
+              <div class="col-md-6">
                 
-                
-                <canvas id="myChart" width="600" height="600"></canvas>
+                Top Product with Most number Of Orders - <span class="text-success font-weight-bold">{{top_product}}</span>
+                <h4 class="mt-5"> Order Chart</h4>
+                <canvas class="border" id="myChart" width="400" height="400"></canvas>
 
                 <br><br><br><br><br><br><br><br>
               </div>
                 {% if top_returned_product %}
-                <div>
+              <div class="col-md-6" >
                   Most Returned Product- <span class="text-success font-weight-bold">{{top_returned_product}}</span>
-                  <canvas class="mt-5" id="mybarChart" width="600" height="600"></canvas>
+                  <h4 class="mt-5"> Return Chart</h4>
+                  <canvas class=" border" id="mybarChart" width="400" height="400"></canvas>
 
-                </div>
+              </div>
                 {% endif %}
 
                 
@@ -409,7 +413,7 @@
               
     
          
-              </div> 
+              
             </div>
   
           </div>
@@ -450,7 +454,7 @@
                               {{ value }},
                                 {% endfor %}
                                 ]; 
-                var barColors = ["skyblue", "lightgreen","red","orange","brown"];
+                var barColors = ["pink", "lightgreen","red","orange","brown"];
                 
                 new Chart("mybarChart", {
                   type: "bar",
