--- a/storeadmin/templates/storeadmin/orders/orders.html
+++ b/storeadmin/templates/storeadmin/orders/orders.html
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <table class="table table-striped">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th>Product</th>
