--- a/storeadmin/templates/storeadmin/productoffer/productoffer.html
+++ b/storeadmin/templates/storeadmin/productoffer/productoffer.html
@@ -6,11 +6,11 @@
 <div class="container">
   <div class="row justify-content-end">
     <a href="{% url 'addproductoffer' %}">
-      <button class="btn add-category-btn btn-primary mt-2">Add Product Offer</button>
+      <button class="btn add-category-btn btn-primary mt-2">Add Offer</button>
     </a>
   </div>
   <div class="row">
-    <table class="table table-striped">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th>Product</th>
@@ -54,11 +54,7 @@
     </table>
   </div>
 </div>
-<div>
-  <button id="but">
-    click
-  </button>
-</div>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
  <script>
