--- a/storeadmin/templates/storeadmin/salesreport.html
+++ b/storeadmin/templates/storeadmin/salesreport.html
@@ -31,6 +31,7 @@
           <div class="row mb-5">
             <button name="show" type="submit" class="btn add-product-btn btn-primary mt-2">Show Report</button>
             <button name="download"  type="submit" class="btn add-product-btn btn-primary mt-2 ml-4 ">Download</button>
+            <button name="downloadinexcel"  type="submit" class="btn add-product-btn btn-primary mt-2 ml-4 ">Download In Excel</button>
               
   
           </div>
