Search implemented for each sections in admin side

--- a/storeadmin/templates/storeadmin/categories/addcategories.html
+++ b/storeadmin/templates/storeadmin/categories/addcategories.html
@@ -5,20 +5,20 @@
     <div class="form-group mt-2">
       {% comment %} {% for item in content  %} {% endcomment %}
       <label for="username">Category Name</label>
-      <input value="{{obj.name}}" name="name" type="text" class="form-control" id="username" placeholder="Enter Category">
+      <input value="{{obj.name}}" name="name" type="text" class="form-control" id="username" placeholder="Enter Category Name">
 
 
 
 
       <label for="username">Quantity</label>
-      <input value="{{obj.noofitems}}" name="quantity" type="number" class="form-control" id="username" placeholder="Enter username">
+      <input value="{{obj.noofitems}}" name="quantity" type="number" class="form-control" id="username" placeholder="Enter Quantity">
 
       <div class="mb-3">
         <label for="image">Image</label>
         <div class="card-img-top">
          
         </div>
-        <input type="file" class="form-control" id="image" name="image" accept="image/*">
+        <input type="file" class=" form-control" id="image" name="image" accept="image/*">
       </div>
 
 
