--- a/storeadmin/templates/storeadmin/categories/categories.html
+++ b/storeadmin/templates/storeadmin/categories/categories.html
@@ -4,6 +4,28 @@
 
 
 <div class="container">
+  <div class="container">
+    <form action="" method="POST">{% csrf_token %}
+      <div class="input-group">
+        <div class="input-group-prepend hover-cursor" id="navbar-search-icon">
+          {% comment %} <span class="input-group-text" id="search">
+            <i class="icon-search"></i>
+          </span> {% endcomment %}
+        </div>
+        <input style="background-color:#FFFFF0
+        ;" type="text" name="searchitem" class="form-control mt-3" id="navbar-search-input" placeholder="Search user" aria-label="search" aria-describedby="search">
+        <div>
+          <button  type="submit" class="btn btn-primary btn-block mt-3 ml-3">Search</button>
+          
+        </div>
+      </div>
+    
+    </form>
+  
+  </div>
+
+
+
   <div class="row justify-content-end">
     <a href="{% url 'admin_addcategories' %}">
       <button class="btn add-category-btn btn-primary mt-2">Add Category</button>
