--- a/storeadmin/templates/storeadmin/productoffer/addproductoffer.html
+++ b/storeadmin/templates/storeadmin/productoffer/addproductoffer.html
@@ -5,7 +5,7 @@
     <div class="form-group mt-2">
       {% comment %} {% for item in content  %} {% endcomment %}
       <label for="inputPassword">Product</label>
-      <select id="dropdown" name="productname">
+      <select class="form-control" id="dropdown" name="productname">
         {% for item in productobjs  %}
         <option value="{{item.name}}">{{item.name}}<br><br> </option>
         {% endfor %}
@@ -16,16 +16,16 @@
 
       <div>
 
-        <label for="username">Offer</label>
-      <input value="{{obj.noofitems}}" name="offer" type="text" class="form-control" id="username" placeholder="Enter username">
+        <label class="mt-4" for="username">Offer</label>
+      <input value="{{obj.noofitems}}" name="offer" type="text" class="form-control" id="username" placeholder="Enter Offer">
 
       </div>
       
 
       <div>
 
-        <label for="username">Discount</label>
-      <input value="{{obj.noofitems}}" name="discount" type="number" class="form-control" id="username" placeholder="Enter username">
+        <label class="mt-4" for="username">Discount</label>
+      <input value="{{obj.noofitems}}" name="discount" type="number" class="form-control" id="username" placeholder="Enter Discount">
 
       </div>
 
