--- a/storeadmin/templates/storeadmin/products/products.html
+++ b/storeadmin/templates/storeadmin/products/products.html
@@ -1,15 +1,93 @@
 {% extends 'storeadmin/index.html' %}
 
 {% block content %}
+{% comment %} <div class="container">
+
+  <div class="container">
+    <div class="row">
+      <form action="" method="POST">{% csrf_token %}
+        <div class="input-group">
+          <div class="input-group-prepend hover-cursor" id="navbar-search-icon">
+          </div>
+          <input type="text" name="searchitem" class="form-control" id="navbar-search-input" placeholder="Search user" aria-label="search" aria-describedby="search">
+          <div>
+            <button type="submit" class="btn btn-primary btn-block mt-4 ml-3">Search</button>
+            
+          </div>
+        </div>
+      
+      </form>
+    
+    </div>
+  </div>
+  
+    
+   
+    
+  <div class="container">
+      <div class="row justify-content-end">
+        <a href="{% url 'admin_addproducts' %}">
+          <button class="btn add-product-btn btn-primary mt-2">Add Product</button>
+        </a>
+      </div>
+      
+      <div class="row">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Price</th>
+              <th>Quantity</th>
+              <th>Category</th>
+              <th>Description</th>
+              <th>Image</th>
+              <th>Edit</th>
+              <th>Delete</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for item in datas %}
+            <tr>
+              <td>{{ item.name }}</td>
+              <td>{{ item.price }}</td>
+              <td>{{ item.quantity }}</td>
+              <td>{{ item.category.name }}</td>
+              <td>{{ item.description }}</td>
+              <td><img src="{{ item.image1.url }}" alt=""></td>
+              <td>
+                <a href="{% url 'admin_editproducts' item.id %}">
+                  <button class="btn edit-btn btn-warning">Edit</button>
+                </a>
+              </td>
+              <td>
+                <button  type="button" class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Delete</button>
+            
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+  </div>
+
+</div> {% endcomment %}
+
+
+
+
 <div class="container">
   <div class="container">
     <form action="" method="POST">{% csrf_token %}
       <div class="input-group">
         <div class="input-group-prepend hover-cursor" id="navbar-search-icon">
+          {% comment %} <span class="input-group-text" id="search">
+            <i class="icon-search"></i> 
+          </span> {% endcomment %}
         </div>
-        <input type="text" name="searchitem" class="form-control" id="navbar-search-input" placeholder="Search user" aria-label="search" aria-describedby="search">
+        <input style="background-color:#FFFFF0
+        ;" type="text" name="searchitem" class="form-control mt-3" id="navbar-search-input" placeholder="Search product" aria-label="search" aria-describedby="search">
         <div>
-          <button type="submit" class="btn btn-primary btn-block mt-4 ml-3">Search</button>
+          <button  type="submit" class="btn btn-primary btn-block mt-3 ml-3">Search</button>
           
         </div>
       </div>
@@ -18,15 +96,14 @@
   
   </div>
 
+  <div class="row justify-content-end">
+    <a href="{% url 'admin_addproducts' %}">
+      <button class="btn add-product-btn btn-primary mt-2">Add Product</button>
+    </a>
+  </div>
   
- 
   
   <div class="container">
-    <div class="row justify-content-end">
-      <a href="{% url 'admin_addproducts' %}">
-        <button class="btn add-product-btn btn-primary mt-2">Add Product</button>
-      </a>
-    </div>
     <div class="row">
       <table class="table table-hover">
         <thead>
@@ -39,35 +116,42 @@
             <th>Image</th>
             <th>Edit</th>
             <th>Delete</th>
+        
           </tr>
         </thead>
         <tbody>
           {% for item in datas %}
-          <tr>
-            <td>{{ item.name }}</td>
-            <td>{{ item.price }}</td>
-            <td>{{ item.quantity }}</td>
-            <td>{{ item.category.name }}</td>
-            <td>{{ item.description }}</td>
-            <td><img src="{{ item.image1.url }}" alt=""></td>
-            <td>
-              <a href="{% url 'admin_editproducts' item.id %}">
-                <button class="btn edit-btn btn-warning">Edit</button>
-              </a>
-            </td>
-            <td>
-              <button  type="button" class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Delete</button>
-          
-            </td>
-          </tr>
-          {% endfor %}
+            <tr>
+              <td>{{ item.name }}</td>
+              <td>{{ item.price }}</td>
+              <td>{{ item.quantity }}</td>
+              <td>{{ item.category.name }}</td>
+              <td style="max-width: 50px; white-space: normal">{{ item.description }}</td>
+              <td><img src="{{ item.image1.url }}" alt=""></td>
+              <td>
+                <a href="{% url 'admin_editproducts' item.id %}">
+                  <button class="btn edit-btn btn-warning">Edit</button>
+                </a>
+              </td>
+              <td>
+                <button  type="button" class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Delete</button>
+            
+              </td>
+            </tr>
+            {% endfor %}
         </tbody>
       </table>
+  
     </div>
+    
+  
+  
   </div>
-
+  
 
 </div>
+
+
 
 
 
